# SWE-Milestone

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  trial_config.example.yaml
docs/: adding-a-model.md  advanced.md  dashboard-migration.md  pr14-quarantine-review-and-fixes.md  quarantine-rollout.md  quarantine.md  re-evaluation.md  release-v1.0-images.md  residue-prune-spec.md  running-trials.md  secure-eval-rollout.md  secure-eval.md  setup.md  versioning.md  vertex-ai.md
harness/: api.py
manifests/: digests-v1.0.tsv  images-v1.0.tsv
quarantine_configs/: BurntSushi_ripgrep_14.1.1_15.0.0.yaml  apache_dubbo_dubbo-3.3.3_dubbo-3.3.6.yaml  element-hq_element-web_v1.11.95_v1.11.97.yaml  navidrome_navidrome_v0.57.0_v0.58.0.yaml  nushell_nushell_0.106.0_0.108.0.yaml  scikit-learn_scikit-learn_1.5.2_1.6.0.yaml  zeromicro_go-zero_v1.6.0_v1.9.3.yaml
scripts/: build_offline_closure.py  build_quarantine_wheelhouse.py  migrate_trial.sh  monitor.sh  pull_data.sh  pull_images.sh  push_images.sh  recapture_trial_snapshots.py  run_all.py  test_build_offline_closure.py  test_run_all_runtime_policy.py  verify_image_digests.py  verify_quarantine.py
tests/: test_openhands_log_parser_timing.py
trial_configs/: claude-code_deepseek-v4-pro.yaml  claude-code_glm-5.1.yaml  claude-code_glm-5.2-1m.yaml  claude-code_glm-5.2.yaml  claude-code_kimi-k2.6.yaml  claude-code_opus-4.6.yaml  claude-code_opus-4.7-1m.yaml  claude-code_opus-4.7.yaml  claude-code_opus-4.8-1m.yaml  claude-code_opus-4.8.yaml  codex_gpt-5.4.yaml  codex_gpt-5.5.yaml  codex_gpt-5.6-sol.yaml  evoharness_bare.yaml  (+7 more)
(+102 files in other folders)
