[project]
name = "swe-milestone"
version = "0.1.0"
description = "SWE-Milestone: End-to-End Evaluation Harness for AI Coding Agents on Real-World Software Evolution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# All tests live under tests/ (mirroring the source tree). Keeping testpaths
# pinned there stops pytest from collecting the test_*-named SOURCE modules
# inside harness/ (test_masking.py, test_id_normalizer.py, test_executor.py,
# test_detector.py — implementation code for handling repo tests).
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
